# erosion

./: .eslintrc.js  .gitignore  Cargo.toml  Makefile  README.md  attributions.txt  env.sh  package.json
front/: .eslintrc.js  build.js  index.css  index.html  index.js  m.js  messages.js  package.json  tsconfig.json  uce.js
front/.yarn/: build-state.yml
front/components/: App.js  Card.js  Component.js  DayPicker.js  Inbox.js  MenuSelect.js  Project.js  SettingsForm.js  WorkspaceSidebar.js  types.d.ts
front/components/icons/: Collapse.js  Logo.js  Settings.js  VertMenu.js
front/components/inbox/: InboxTagTime.js  NewCardForm.js  index.js
front/src/: index.js  index.ts  messages.js  messages.ts  types.d.ts
front/src/components/: App.js  Card.ts  CardEditForm.ts  Component.ts  DayPicker.js  DueToday.ts  NewInboxForm.ts  NewProjectForm.js  Project.js  SettingsForm.js  WorkspaceSidebar.js  icons.ts
front/src/components/card/: Actions.ts  Card.ts  CardEditForm.ts  CardModel.ts  TimeAllotted.ts
front/src/components/common-ui/: DayPicker.js  MenuSelect.js  Modal.ts  types.d.ts
front/src/components/icons/: Add.js  Cancel.js  Check.js  Edit.js  Expand.js  Logo.js  NewInbox.js  NewProject.js  Trash.js  index.ts
front/src/components/inbox/: InboxModel.ts  InboxTagTime.js  InboxTagTime.ts  NewCardForm.ts  index.js
front/src/utils/: lenses.js  lenses.ts  reactivity.js  rendering.js  rendering.ts  time.js  time.ts  types.d.ts
front/styles/: card-edit.css  card.css  inbox.css  project.css  settingsform.css  time-allotted.css  workspace-sidebar.css  workspace.css
front/utils/: lang.js  lenses.js  reactivity.js  rendering.js  time.js
src/: bootstrap.rs  cards.rs  cli.rs  data_structures.rs  envrionment.rs  events.rs  filesystem.rs  inboxes.rs  lenses.rs  main.rs  recurring_tasks.rs  services.rs  tauri-adapter.rs  web.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: bootstrap.rs  cards.rs  data_structures.rs  events.rs  filesystem.rs  inboxes.rs  lenses.rs  main.rs  projects.rs  switchboard.rs
src/services/: due_today.rs  mod.rs
