[package]
name = "erosion"
version = "0.0.1"
authors = ["Taylor Thompson <taylor@teukka.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
directories = "3.0.1"
serde_json = "1.0.61"
chrono = "0.4.19"
uuid = { version = "0.8.1", features = ["v4","serde"] }
serde = { version = "1.0.118", features = ["derive"] }
