[package]
name = "erosion"
version = "0.1.0"
description = "A Tauri App"
authors = [ "Taylor Thompson <taylor@teukka.tech>" ]
license = ""
repository = ""
default-run = "erosion"
edition = "2018"

[dependencies]
structopt = "0.3.21"
directories = "3.0.1"
serde_json = "1.0.61"
chrono = "0.4.19"
uuid = { version = "0.8.1", features = [ "v4", "serde" ] }
serde = { version = "1.0.118", features = [ "derive" ] }
clap = "2.33.3"
tokio = { version = "1", features = ["full"] }
warp = "0.3"


[[bin]]
name = "erosion"
path = "src/main.rs"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "z"
